# backend/src/main/java/jp/ac/osaka_u/ist/sdl/kjuiceapp/controller/item/requestbody/ItemAddRequestBody.java
@@ -1,4 +1,4 @@
 package jp.ac.osaka_u.ist.sdl.kjuiceapp.controller.item.requestbody;
 
 public record ItemAddRequestBody(
-    String id, String name, int sellingPrice, int costPrice, String group) {}
+    String id, String name, int sellingPrice, int costPrice, String category) {}
