# backend/src/main/java/jp/ac/osaka_u/ist/sdl/kjuiceapp/controller/item/requestbody/ItemUpdateRequestBody.java
@@ -6,5 +6,5 @@ public record ItemUpdateRequestBody(
     String name,
     Optional<Integer> sellingPrice,
     Optional<Integer> costPrice,
-    Optional<String> group,
+    Optional<String> category,
     Optional<Boolean> isActive) {}
