# backend/src/main/java/jp/ac/osaka_u/ist/sdl/kjuiceapp/controller/item/responsebody/ItemResponseBody.java
@@ -7,5 +7,5 @@ public record ItemResponseBody(
     String name,
     int sellingPrice,
     int costPrice,
-    String group,
+    String category,
     boolean isActive) {}
